--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     </div>
     <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Nourhen ALLgui</a>.
+    Coded by <a href="https://github.com/NourhenAllagui/social-links-profile">Nourhen ALLgui</a>.
   </div>
   </div>
 </body>
